Additional yaml paths and mock port
