# src/controllers/motorsController.js
@@ -1,0 +1,15 @@
+import SmoothieboardInterface from '../lib/smoothieboardInterface'
+
+export function enableMotors(request, response){
+	SmoothieboardInterface.sendCommand('M17')
+	response.send({
+		message : 'Ok'
+	})
+}
+
+export function disableMotors(request, response){
+	SmoothieboardInterface.sendCommand('M18')
+	response.send({
+		message : 'Ok'
+	})
+}
